syntax = "proto3";

package api_message;

import "home_chat.proto";
import "home_account.proto";
import "errors.proto";

service Message {
    // 存储私聊消息
    rpc SaveSingleChatMessage(SaveSingleChatMessageReq) returns (SaveSingleChatMessageRes) {};
}

message SaveSingleChatMessageReq {
    im_home_proto.ClientOnlineInfo ClientInfo = 1;
    im_home_proto.ChatMessage Data = 2;
}

message SaveSingleChatMessageRes {
    im_error_proto.ErrCode ErrCode = 1;
    bool IsOnline = 2;  // 消息接收者是否在线
}